[package]
name = "input-painter"
description = "A simple cli tool for coloring the output of other programs"
version = "0.1.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/Zynh0722/input-painter"
repository = "https://github.com/Zynh0722/input-painter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
termcolor = "1.2.0"
